Replace deprecated URL constructor in getUrl (#1179)
* Replace URL with URI in FeignClientsRegistrar to avoid deprecation warning

The constructor 'URL(String)' has been deprecated since Java 20. Although this does not affect the current environment (Java 17), it will cause issues when upgrading to Java 21 or later.
This commit updates the URL validation in FeignClientsRegistrar.getUrl by replacing `new URL(url)` with `new URI(url)`, ensuring forward compatibility.
Verified with Java 17 and the FeignClientsRegistrarTests.

Signed-off-by: HyeongDo-Myeong <hd.m@kt.com>

* chore: update license year and add author tags

Updated license headers to reflect year 2025 in all modified Java files.
Also added @author Javadoc tags with full name to classes modified in the previous commit as requested in PR review.

Signed-off-by: HyeongDo-Myeong <hd.m@kt.com>

---------

Signed-off-by: HyeongDo-Myeong <hd.m@kt.com>